Recursion/compiling_error.txt
/Users/abhijithneilabraham/Documents/GitHub/Data-structures-Cpp-python/Recursion/towerofhanoi.cpp:16:45: error: invalid operands to binary expression ('const char *' and 'int')
    cout<<"\nMove disk one from peg"<<a<"to"<<c;
                                        ~~~~^ ~
1 error generated.
